# scholar-network

./: .gitignore  404.html  Makefile  Procfile  README.md  algorithms.py  connections.pkl  index.html  load_scholars.py  main.py  mkdocs.yml  pairs.csv  pyproject.toml  requirements.txt  runtime.txt  saving.py  setup.cfg  sitemap.xml
api-reference/helpers/: index.html
api-reference/models/: index.html
api-reference/scraping/: index.html
api_reference/: index.html
data/: COP-graph-positions.pkl  COP-graph.pkl  COPscholars.csv  connections.json  flattened-scraped.json  scraped.json
docs/: index.md
docs/api-reference/: helpers.md  models.md  scraping.md
notebooks/: google_scholar.ipynb
notebooks/.ipynb_checkpoints/: google_scholar-checkpoint.ipynb
search/: search_index.json
src/scholar_network/: __init__.py  graphing.py  helpers.py  load_scholars.py  main.py  models.py  scraping.py
tests/: test_scholar_network.py
