[tool.poetry]
name = "scholar-network"
version = "0.1.0"
description = "Network Analysis and Web App for IPOP scholars"
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
pandas = "^1.2.3"
networkx = "^2.5"
plotly = "^4.14.3"
dash = "^1.19.0"
scholarly = "^1.1.0"
selenium = "^3.141.0"
scipy = "^1.6.2"
dash-bootstrap-components = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
pytest = "^6.2.2"
ipython = "^7.22.0"
rich = "^10.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
