[tool.poetry]
name = "scholar-network"
version = "0.1.9"
description = "Graph Network Analysis for scraping Google Scholar authors."
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
pytest = "^6.2.2"
ipython = "^7.22.0"
rich = "^10.0.0"
mkdocstrings = "^0.15.0"
mkdocs-material = "^7.1.0"
mkdocs = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
