[tool.poetry]
name = "scholar-network"
version = "0.2.6"
description = "Graph Network Analysis for scraping Google Scholar authors."
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
selenium = "^4.3.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^8.3.9"
mkdocstrings = "^0.19.0"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
